modified:   base/app/__pycache__/forms.cpython-36.pyc 	modified:   base/app/__pycache__/models.cpython-36.pyc 	modified:   base/app/__pycache__/routes.cpython-36.pyc 	modified:   base/app/forms.py 	modified:   base/app/models.py 	modified:   base/app/routes.py 	modified:   base/app/static/css/styles.css 	modified:   base/app/templates/applicantinfo.html 	modified:   base/app/templates/applyjob.html 	modified:   base/app/templates/findjobs.html 	new file:   base/app/templates/givefeedback.html 	modified:   base/app/templates/index_reg.html 	new file:   base/app/templates/myfeedback.html 	modified:   base/app/templates/myjobs.html 	modified:   base/app/templates/myprofile.html 	modified:   base/app/templates/viewapplicants.html 	new file:   base/app/userfiles/resumes/EP Grading Criteria Form - T2 2018-19.docx 	new file:   base/migrations/versions/4b1c77f6ff57_.py 	new file:   base/migrations/versions/__pycache__/4b1c77f6ff57_.cpython-36.pyc 	new file:   base/migrations/versions/__pycache__/d72dd93fe43d_.cpython-36.pyc 	new file:   base/migrations/versions/__pycache__/e844b582f51c_.cpython-36.pyc 	new file:   base/migrations/versions/d72dd93fe43d_.py 	new file:   base/migrations/versions/e844b582f51c_.py

--- a/base/app/templates/applicantinfo.html
+++ b/base/app/templates/applicantinfo.html
@@ -97,13 +97,7 @@
 
                   <p style="text-align:center">Gender: {{ user.gender }}</p>
 
-                  <p style="text-align:center">Phone No: {{ user.phone_no }}
-
-                <p style="text-align:center">Rating:
-                {% for i in range(user.stars) %}
-                  &#9733;
-                {% endfor %}
-                </p>
+                  <p style="text-align:center">Phone No: {{ user.phone_no }}</p>
 
                 <p style="text-align:center"><a href="/download_resume/{{ resume_name }}" download>Download Resume</a></p>
                 <hr>
