--- a/base/app/templates/applyjob.html
+++ b/base/app/templates/applyjob.html
@@ -32,34 +32,30 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('index_reg') }}">Featured Jobs</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="{{ url_for('findjobs') }}">Find Jobs</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('findjobs') }}">More Jobs</a>
-            </li>
-            {% if current_user.role == 'regular' %}
-            <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('myjobs') }}">My Jobs</a>
-            </li>
-            {% endif %}
-
-            <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
-            </li>
-
-
-          </ul>
+          <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Menu
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <h3 class="nav-link dropdown-header text-info">Jobs</h3>
+                <a class="nav-link dropdown-item text-secondary" href="{{ url_for('index_reg') }}">Featured Jobs</a>
+                <a class="nav-link dropdown-item text-secondary" href="{{ url_for('findjobs') }}">Find Jobs</a>
+                <a class="nav-link dropdown-item text-secondary" href="{{ url_for('myjobs')}}">My Jobs</a>
+                <a class="nav-link dropdown-item text-secondary" href="{{ url_for('myjobs')}}">More Jobs</a>
+              <h3 class="nav-link dropdown-header text-info">Profile</h3>
+                <a class="nav-link dropdown-item text-secondary" href="{{ url_for('myprofile', id=current_user.id)}}">My Profile</a>
+                <a class="nav-link dropdown-item text-secondary" href="{{ url_for('myfeedback')}}">My Feedback</a>
+                <a class="nav-link dropdown-item text-secondary" href="{{ url_for('logout') }}">Logout</a>
+            </div>
+          </div>
+         </ul>
         </div>
       </div>
     </nav>
 
     <!-- Page Content -->
     <div class="container">
-      <br><br><br><br><br>
+      <br><br><br><br><br><br>
 
       <div class="card animated fadeInLeft">
 
