--- a/base/app/templates/myprofile.html
+++ b/base/app/templates/myprofile.html
@@ -26,40 +26,35 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#" style="padding-top: 10px;padding-right:25px;"><img src="{{url_for('static',filename='img/$MU.png')}}" width="auto" height="30" alt=""></a>
-        <a class="navbar-brand" style="color:#fff; padding-bottom: 3px;">Welcome,</a><a class="navbar-brand active" href="#"><i><u>{{current_user.email}}</u></i></a>
+        <a class="navbar-brand" style="color:#fff; padding-bottom: 3px;">Welcome,</a><a class="navbar-brand" href="{{ url_for('myprofile',id=current_user.id)}}"><i><u>{{current_user.email}}</u></i></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('index_reg') }}">Featured Jobs</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('findjobs') }}">Find Jobs</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('findjobs') }}">More Jobs</a>
-            </li>
-
-            {% if current_user.role == 'regular' %}
-            <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('myjobs') }}">My Jobs</a>
-            </li>
-            {% endif %}
-
-            <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
-            </li>
-
-
-          </ul>
+          <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Menu
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <h3 class="nav-link dropdown-header text-info">Jobs</h3>
+                <a class="nav-link dropdown-item text-secondary" href="{{ url_for('index_reg') }}">Featured Jobs</a>
+                <a class="nav-link dropdown-item text-secondary" href="{{ url_for('findjobs') }}">Find Jobs</a>
+                <a class="nav-link dropdown-item text-secondary" href="{{ url_for('myjobs')}}">My Jobs</a>
+                <a class="nav-link dropdown-item text-secondary" href="{{ url_for('myjobs')}}">More Jobs</a>
+              <h3 class="nav-link dropdown-header text-info">Profile</h3>
+                <a class="nav-link dropdown-item text-secondary" href="{{ url_for('myprofile', id=current_user.id)}}">My Profile</a>
+                <a class="nav-link dropdown-item text-secondary" href="{{ url_for('myfeedback')}}">My Feedback</a>
+                <a class="nav-link dropdown-item text-secondary" href="{{ url_for('logout') }}">Logout</a>
+            </div>
+          </div>
+         </ul>
         </div>
       </div>
     </nav>
 
     <!-- Page Content -->
-    <br><br><br><br>
+    <br><br><br><br><br>
     {% for c in comment %}
 
     <div class="alert alert-secondary animated fadeIn" role="alert" style="text-align:center;">
@@ -86,14 +81,6 @@
             <h5 style="text-align:center">{{ current_user.email }}</h5>
             <a href="#"><p style="text-align:center">Reset Password?</p></a>
             <p style="text-align:center;margin-top:50px"><u>Current Rating:</u></p>
-            <div style="text-align:center">
-              <p style="font-size:30px;margin-bottom:30px;">
-            {% for i in range(user.stars) %}
-              &#9733;
-            {% endfor %}
-          </p>
-            <hr>
-          </div>
 
 
 
