--- a/base/app/templates/applicantinfo.html
+++ b/base/app/templates/applicantinfo.html
@@ -90,8 +90,8 @@
                 </div>
 
                 <div class="card-body">
-                  <img src="{{ url_for('static', filename='img/placeholder.jpg')}}" class="img-responsive mx-auto d-block rounded-circle" width="150px" height="150px">
-                  <br>
+                  <!-- <img src="{{ url_for('static', filename='img/placeholder.jpg')}}" class="img-responsive mx-auto d-block rounded-circle" width="150px" height="150px"> -->
+                  <!-- <br> -->
                   <h4 style="text-align:center">{{ user.email }}</h4>
 
 
