--- a/base/app/templates/givefeedback.html
+++ b/base/app/templates/givefeedback.html
@@ -72,7 +72,7 @@
     </nav>
 
     <!-- Page Content -->
-    <br><br><br><br><br>
+    <br><br><br><br><br><br>
     <div class="container d-flex justify-content-center">
       <br><br><br><br><br>
       <h2 style="text-align:center"></h2>
@@ -86,12 +86,11 @@
                 </div>
 
                 <div class="card-body">
-                  <h5>Some compliments and/or constructive criticisms please</h5>
-                  <br><br>
+                  <h5>Some compliments and/or constructive criticisms...</h5>
                     <form method="post">
                       {{ form.hidden_tag() }}
-
-                      {{ form.feedback(class_="form-control") }}
+                      <br>
+                      {{ form.feedback(class_="form-control",placeholder="Enter Comments Here",height="80") }}
 
                       <br><br>
 
