--- a/base/app/templates/myprofile.html
+++ b/base/app/templates/myprofile.html
@@ -41,7 +41,7 @@
                 <a class="nav-link dropdown-item text-secondary" href="{{ url_for('index_reg') }}">Featured Jobs</a>
                 <a class="nav-link dropdown-item text-secondary" href="{{ url_for('findjobs') }}">Find Jobs</a>
                 <a class="nav-link dropdown-item text-secondary" href="{{ url_for('myjobs')}}">My Jobs</a>
-                <a class="nav-link dropdown-item text-secondary" href="{{ url_for('myjobs')}}">More Jobs</a>
+                <a class="nav-link dropdown-item text-secondary" href="{{ url_for('morejobs')}}">More Jobs</a>
               <h3 class="nav-link dropdown-header text-info">Profile</h3>
                 <a class="nav-link dropdown-item text-secondary" href="{{ url_for('myprofile', id=current_user.id)}}">My Profile</a>
                 <a class="nav-link dropdown-item text-secondary" href="{{ url_for('myfeedback')}}">My Feedback</a>
@@ -55,19 +55,21 @@
 
     <!-- Page Content -->
     <br><br><br><br><br>
-    {% for c in comment %}
 
-    <div class="alert alert-secondary animated fadeIn" role="alert" style="text-align:center;">
-      <h5 style='margin-top:9px'>{{ c }}</h5>
-      </div>
-      {% endfor %}
 
     <div class="container d-flex justify-content-center">
       <br><br><br><br><br>
 
+      <div class="animated fadeInLeft w-75">
 
-      <div class="card animated fadeInLeft w-75">
+        {% for c in comment %}
 
+        <div class="alert alert-secondary animated fadeIn" role="alert" style="text-align:center;">
+          <h5 style='margin-top:9px'>{{ c }}</h5>
+          </div>
+          {% endfor %}
+
+        <div class="card">
           <div class="card-header">
             <h1 style="text-align:center;margin-top:25px;">My Profile</h1>
           </div>
@@ -76,8 +78,8 @@
           <div class="card-body">
             <form method="post" enctype="multipart/form-data">
               {{ form.hidden_tag() }}
-            <img src="{{ url_for('static', filename='img/placeholder.jpg')}}" class="img-responsive mx-auto d-block rounded-circle" width="150px" height="150px">
-            <br>
+            <!-- <img src="{{ url_for('static', filename='img/placeholder.jpg')}}" class="img-responsive mx-auto d-block rounded-circle" width="150px" height="150px"> -->
+            <!-- <br> -->
             <h5 style="text-align:center">{{ current_user.email }}</h5>
             <a href="#"><p style="text-align:center">Reset Password?</p></a>
             <p style="text-align:center;margin-top:50px"><u>Current Rating:</u></p>
@@ -148,6 +150,7 @@
 
       </div>
     </div>
+  </div>
   </div>
 
 
